--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-annotated-types==0.5.0
-anyio==3.6.2
+annotated-types==0.4.0
+anyio==3.7.1
 arcgis==1.8.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -12,11 +12,11 @@ beautifulsoup4==4.12.3
 bleach==6.1.0
 box-sdk-gen==1.1.0
 boxsdk==3.11.0
-brotli==1.0.9
-certifi==2023.7.22
+Brotli==1.0.9
+certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.2.0
-click==8.1.7
+click==8.1.3
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.2.1
@@ -26,25 +26,24 @@ debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
 dnspython==2.4.2
-email-validator==1.2.1
-exceptiongroup==1.1.1
+email_validator==2.0.0.post2
+exceptiongroup==1.1.3
 executing==2.0.1
-fastapi==0.103.0
-fastapi-cli==0.0.4  
+fastapi==0.98.0
 fastjsonschema==2.20.0
 fonttools==4.53.1
 fqdn==1.5.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
-httpcore==0.17.0
+httpcore==0.17.3
 httptools==0.6.1
 httpx==0.24.1
 hyperframe==6.0.1
 idna==3.4
 iniconfig==2.0.0
 ipykernel==6.29.5
-ipython==8.13.0
+ipython==8.12.0
 ipywidgets==8.1.3
 isoduration==20.11.0
 itsdangerous==2.2.0
@@ -55,12 +54,12 @@ jedi==0.19.1
 Jinja2==3.1.2
 json5==0.9.25
 jsonpointer==3.0.0
-jsonschema==4.23.0
+jsonschema==4.17.3
 jsonschema-specifications==2023.12.1
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
 jupyterlab==4.2.4
@@ -74,7 +73,7 @@ markdown-it-py==2.2.0
 MarkupSafe==2.1.3
 matplotlib==3.9.1
 matplotlib-inline==0.1.7
-mdurl==0.1.0
+mdurl==0.1.2
 mistune==3.0.2
 more-itertools==10.3.0
 nbclient==0.10.0
@@ -84,80 +83,81 @@ nest-asyncio==1.6.0
 notebook_shim==0.2.4
 numpy==2.0.1
 oauthlib==3.2.2
-orjson==3.10.6
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
-pandocfilters==1.5.1
+orjson==3.8.9
+overrides==7.3.1
+packaging==23.1
+pandas==2.0.3
+pandocfilters==1.5.0
 parso==0.8.4
-pillow==9.4.0
-platformdirs==4.2.2
-pluggy==1.5.0
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-psutil==6.0.0
-pure_eval==0.2.3
+pillow==10.0.0
+platformdirs==3.10.0
+pluggy==1.2.0
+prometheus_client==0.17.1
+prompt_toolkit==3.0.38
+psutil==5.9.5
+pure_eval==0.2.2
 pycparser==2.21
-pydantic==2.2.1
-pydantic-extra-types==2.9.0
-pydantic-settings==2.3.4
-pydantic_core==2.2.1
-Pygments==2.16.1
-pyparsing==3.1.2
+pydantic==2.1.1
+pydantic-core==2.2.0  # Updated to compatible version
+pydantic-extra-types==1.7.0
+pydantic-settings==1.10.11
+pydantic_core==2.4.0  # Example of a compatible version
+Pygments==2.16.0
+pyparsing==3.1.0
 pyshp==2.3.1
 PySocks==1.7.1
-pyspnego==0.11.1
-pytest==8.3.1
-python-dateutil==2.9.0.post0
+pyspnego==0.9.0
+pytest==7.4.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
 python-multipart==0.0.5
-pytz==2024.1
+pytz==2023.3
 pywin32==306
-pywin32-ctypes==0.2.2
-pywinpty==2.0.13
-PyYAML==6.0.1
-pyzmq==26.0.3
-referencing==0.35.1
+pywin32-ctypes==0.2.0
+pywinpty==2.0.11
+PyYAML==6.0
+pyzmq==25.0.2
+referencing==0.28.0
 requests==2.31.0
-requests-kerberos==0.15.0
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-requests_ntlm==1.3.0
+requests-kerberos==0.14.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.10.1
+requests_ntlm==1.1.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==13.0.0
-rpds-py==0.19.0
-Send2Trash==1.8.3
-setuptools==69.5.1
+rich==13.3.4
+rpds-py==0.7.0
+Send2Trash==1.8.2
+setuptools==68.0.0
 shellingham==1.5.0
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
+sniffio==1.2.0
+soupsieve==2.4.1
 sspilib==0.1.0
-stack-data==0.6.3
-starlette==0.27.0
-terminado==0.18.1
-tinycss2==1.3.0
-tornado==6.4.1
-traitlets==5.14.3
-typer==0.12.3
-typer-slim==0.12.3
-types-python-dateutil==2.9.0.20240316
-typing_extensions==4.8.0
-tzdata==2024.1
-ujson==5.10.0
-uri-template==1.3.0
-urllib3==2.1.0
+stack-data==0.6.2
+starlette==0.32.0
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.3.2
+traitlets==5.9.0
+typer==0.9.0
+typer-slim==0.2.0
+types-python-dateutil==2.8.19.13
+typing_extensions==4.7.1
+tzdata==2023.3
+ujson==5.7.0
+uri-template==1.2.0
+urllib3==2.0.3
 uvicorn==0.22.0
-watchfiles==0.22.0
-wcwidth==0.2.13
-webcolors==1.12
+watchfiles==0.19.0
+wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.8.0
-websockets==12.0
-wheel==0.43.0
-widgetsnbextension==4.0.11
+websocket-client==1.6.0
+websockets==10.4
+wheel==0.40.0
+widgetsnbextension==4.0.10
 win-inet-pton==1.1.0
-winkerberos==0.11.0
-zstandard==0.23.0
+winkerberos==0.9.0
+zstandard==0.19.0
