--- a/requirements.txt
+++ b/requirements.txt
@@ -1,162 +1,6 @@
-annotated-types==0.4.0
-anyio==3.7.1
-arcgis==1.8.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.15.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-box-sdk-gen==1.1.0
-boxsdk==3.11.0
-Brotli==1.0.9
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.3
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.2.1
-cryptography==43.0.0
-cycler==0.12.1
-debugpy==1.8.2
-decorator==5.1.1
-defusedxml==0.7.1
-dnspython==2.4.2
-email_validator==2.0.0.post2
-exceptiongroup==1.1.3
-executing==2.0.1
-fastapi==0.98.0
-fastjsonschema==2.20.0
-fonttools==4.53.1
-fqdn==1.5.1
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==0.17.3
-httptools==0.6.1
-httpx==0.24.1
-hyperframe==6.0.1
-idna==3.4
-iniconfig==2.0.0
-ipykernel==6.29.5
-ipython==8.12.0
-ipywidgets==8.1.3
-isoduration==20.11.0
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==5.3.0
-jaraco.functools==4.0.1
-jedi==0.19.1
-Jinja2==3.1.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.17.3
-jsonschema-specifications==2023.12.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.4
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.11
-keyring==25.2.1
-kiwisolver==1.4.5
-lerc==4.0.1
-markdown-it-py==2.2.0
-MarkupSafe==2.1.3
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.0.2
-more-itertools==10.3.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook_shim==0.2.4
-numpy==2.0.1
-oauthlib==3.2.2
-orjson==3.8.9
-overrides==7.3.1
-packaging==23.1
-pandas==2.0.3
-pandocfilters==1.5.0
-parso==0.8.4
-pillow==10.0.0
-platformdirs==3.10.0
-pluggy==1.2.0
-prometheus_client==0.17.1
-prompt_toolkit==3.0.38
-psutil==5.9.5
-pure_eval==0.2.2
-pycparser==2.21
-pydantic==2.1.1
-pydantic-extra-types==2.9.0
-pydantic-settings==2.3.4
-pydantic-core==2.4.0
-Pygments==2.16.0
-pyparsing==3.1.0
-pyshp==2.3.1
-PySocks==1.7.1
-pyspnego==0.9.0
-pytest==7.4.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-json-logger==2.0.7
-python-multipart==0.0.5
-pytz==2023.3
-pywin32==305  # Updated version
-pywin32-ctypes==0.2.0
-pywinpty==2.0.11
-PyYAML==6.0
-pyzmq==25.0.2
-referencing==0.28.0
-requests==2.31.0
-requests-kerberos==0.14.0
-requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-requests_ntlm==1.1.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.3.4
-rpds-py==0.7.0
-Send2Trash==1.8.2
-setuptools==68.0.0
-shellingham==1.5.0
-six==1.16.0
-sniffio==1.2.0
-soupsieve==2.4.1
-sspilib==0.1.0
-stack-data==0.6.2
-starlette==0.32.0
-terminado==0.17.1
-tinycss2==1.2.1
-tornado==6.3.2
-traitlets==5.9.0
-typer==0.9.0
-typer-slim==0.2.0
-types-python-dateutil==2.8.19.13
-typing_extensions==4.7.1
-tzdata==2023.3
-ujson==5.7.0
-uri-template==1.2.0
-urllib3==2.0.3
-uvicorn==0.22.0
-watchfiles==0.19.0
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.0
-websockets==10.4
-wheel==0.40.0
-widgetsnbextension==4.0.10
-win-inet-pton==1.1.0
-winkerberos==0.9.0
-zstandard==0.19.0
+fastapi[all]
+uvicorn
+requests
+python-dotenv
+Pillow
+boxsdk[jwt]
